--- a/componentes/ButtonLight/ButtonLight.module.css
+++ b/componentes/ButtonLight/ButtonLight.module.css
@@ -118,7 +118,7 @@
     box-sizing: border-box;
     width: 100%;
     height: 64px;
-    white-space: nowrap;
+    white-space: normal;
     display: flex;
     align-items: center;
     justify-content: center;
