adiciona borda ao submenu da nav bar

--- a/componentes/NavBar/NavBar.module.css
+++ b/componentes/NavBar/NavBar.module.css
@@ -299,7 +299,8 @@
     left: 278px;
     color: #FFFFFF;
     visibility: hidden;
-
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+    border-radius: 8px;
     display: flex;
     flex-direction: column;
     justify-content: center;
