--- a/componentes/CardTrilha/CardTrilha.module.css
+++ b/componentes/CardTrilha/CardTrilha.module.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     padding: 25px;
     gap: 20px;
-    width: 621px;
+    width: 100%;
     background: #EFF5F9;
     border-radius: 20px;
 }
