--- a/componentes/NavBar/NavBar.module.css
+++ b/componentes/NavBar/NavBar.module.css
@@ -59,6 +59,7 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
+    font-size: 16px;
   }
   .themeColorIP a:hover{
     color: #FFFFFF;
@@ -220,7 +221,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    width: 278px;
+    width: 340px;
     white-space: normal;
   }
   
@@ -237,6 +238,8 @@
     padding: 20px 15px;
     width: 100%;
     white-space: normal;
+    line-height: 150%;
+    letter-spacing: -0.01em;
   }
   
   .NavBarSubMenuContainerColorSM {
@@ -294,9 +297,8 @@
 
   .NavBarSubMenuItemContainer{
     position: absolute;
-    width: fit-content;
     height: fit-content;
-    left: 278px;
+    left: 340px;
     color: #FFFFFF;
     visibility: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
@@ -305,7 +307,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    width: 278px;
+    width: 300px;
     white-space: normal;
   }
 
@@ -317,6 +319,8 @@
     padding: 20px 15px;
     width: 100%;
     white-space: normal;
+    line-height: 150%;
+    letter-spacing: -0.01em;
   }
 
   .NavBarSubMenuItemColorSM {
@@ -363,7 +367,7 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .NavBarSubMapMobileContainer {
