corrige cor dos botões para temas white

--- a/componentes/ButtonColor/ButtonColor.module.css
+++ b/componentes/ButtonColor/ButtonColor.module.css
@@ -25,22 +25,22 @@
     text-decoration: none;
 }
 
-.ColorSM {
+.ColorSM, .WhiteSM {
     background-color: #5367C9;
     border: none;
 }
 
-.ColorSM:hover {
+.ColorSM:hover, .WhiteSM:hover {
     background-color: #1B2D82;
     cursor: pointer;
 }
 
-.ColorIP {
+.ColorIP, .White {
     border: 1px solid rgba(96, 110, 120, 0.15);
     background-color: #2EB280;
 }
 
-.ColorIP:hover{
+.ColorIP:hover, .White:hover{
     border: 1px solid rgba(96, 110, 120, 0.50);
     background-color: #1D856C;
     cursor: pointer;
