--- a/componentes/ButtonLight/ButtonLight.module.css
+++ b/componentes/ButtonLight/ButtonLight.module.css
@@ -15,6 +15,26 @@
     padding-right: 8px;
 }
 
+.ButtonLightLarge{
+    border: 1px solid rgba(96, 110, 120, 0.50);
+    background-color: #fff;
+    color: #1F1F1F;
+    border-radius: 100px;
+    padding: 0px 23px;
+    font-size: 15px;
+    font-family: 'inter';
+    font-weight: 500;
+    line-height: 100%;
+    box-sizing: border-box;
+    width: 100%;
+    height: 64px;
+    white-space: nowrap;
+    display: grid;
+    align-items: center;
+    text-decoration: none;
+    text-align: center;
+    white-space: pre-line;
+}
 
 .ButtonLightContainer{
     border: 1px solid rgba(96, 110, 120, 0.50);
@@ -76,6 +96,26 @@
     .IconeRight{
         padding-right: 0px;
     }
+    .ButtonLightLarge{
+        border: 1px solid rgba(96, 110, 120, 0.15);
+        color: #1F1F1F;
+        background-color: rgba(255, 255, 255, 0);
+        border-radius: 100px;
+        padding: 0px 25px;
+        font-size: 15px;
+        font-family: 'inter';
+        font-weight: 500;
+        line-height: 100%;
+        text-align: center;
+        box-sizing: border-box;
+        width: 100%;
+        height: 64px;
+        white-space: normal;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+    }
     
 }
 
@@ -124,3 +164,4 @@
     justify-content: center;
     text-decoration: none;
 }
+
