--- a/componentes/ModulosTrilha/ModulosTrilha.module.css
+++ b/componentes/ModulosTrilha/ModulosTrilha.module.css
@@ -65,6 +65,34 @@
     color: #FFFFFF;
 }
 
+.PastaModuloAtualSM{
+    /* Auto layout */
+    text-decoration: none;
+    height: fit-content;
+    display: flex;
+    align-items: flex-start;
+    padding: 25px;
+    gap: 15px;
+    
+    margin-bottom: 10px;
+
+    background: #5367C9;
+    border-radius: 20px;
+
+    /* Inside auto layout */
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: -0.01em;
+    color: #FFFFFF;
+}
+
 .Botoes{
     display: inline-flex;
     gap: 15px;
