--- a/componentes/ButtonLight/ButtonLight.module.css
+++ b/componentes/ButtonLight/ButtonLight.module.css
@@ -63,7 +63,7 @@
 
 .ButtonLightIconContainer{
     border: 1px solid rgba(96, 110, 120, 0.50);
-    background-color: #fff;
+    background: none;
     color: #1F1F1F;
     border-radius: 100px;
     padding: 0px 23px;
@@ -82,7 +82,30 @@
 
 .ButtonLightIconContainer:hover{
     border: 1px solid rgba(31, 31, 31, 1);
-    background-color: #fff;
+    background: none;
+}
+
+.ButtonLightDisabled {
+    border: 1px solid rgba(96, 110, 120, 0.50);
+    background: none;
+    color: rgba(96, 110, 120, 0.50);
+    border-radius: 100px;
+    padding: 0px 23px;
+    font-size: 15px;
+    font-family: 'inter';
+    font-weight: 500;
+    line-height: 100%;
+    box-sizing: border-box;
+    width: fit-content;
+    height: 64px;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+.ButtonLightDisabled:hover {
+    cursor: default;
 }
 
 /* SMALL */
@@ -116,7 +139,15 @@
         justify-content: center;
         text-decoration: none;
     }
-    
+
+    .ButtonLightDisabled {
+        border: 1px solid rgba(96, 110, 120, 0.15);
+        color: rgba(96, 110, 120, 0.50);
+        padding: 0px 25px;
+        width: 100%;
+        white-space: normal;
+        justify-content: center;
+    }
 }
 
 .ButtonLightContainerMobile{
