--- a/componentes/CardTrilha/CardTrilha.module.css
+++ b/componentes/CardTrilha/CardTrilha.module.css
@@ -1,6 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap");
 
-
+.Tooltip {
+    font-family: 'Inter';
+    width: 230px;
+    text-align: center;
+    font-style: normal;
+    font-weight: 400;
+}
 
 .DivTrilha{
     background-color: #FFF;
