--- a/componentes/GraficoInfo/GraficoInfo.module.css
+++ b/componentes/GraficoInfo/GraficoInfo.module.css
@@ -34,7 +34,8 @@
 
 .InfoSimbolo {
     color: #9ba4a5;
-    font-size: 11px;
+    font-size: 12px;
+    font-weight: bolder;
 }
 
 .InfoSimbolo:hover {
