ajusta fontes e prop link de gráfico info

--- a/componentes/GraficoInfo/GraficoInfo.module.css
+++ b/componentes/GraficoInfo/GraficoInfo.module.css
@@ -1,15 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@40;500&display=swap");
 
-.GraficoInfoContainer {
+.GraficoInfo {
     font-family: 'Inter';
     font-weight: 400;
     font-style: normal;
-    line-height:  130%;
-    letter-spacing: -0.01em;
+    letter-spacing: -2%;
     width: 100%;
     display: grid;
     grid-template-columns: 2fr 1fr;
     column-gap: 20px;
+    row-gap: 6px;
 }
 
 .TituloContainer {
@@ -20,21 +20,24 @@
 
 .Titulo {
     margin: 0;
-    font-size: 14px;
+    font-size: 32px;
+    line-height:  130%;
 }
 
 .Tooltip {
     font-family: 'Inter';
-    font-size: 12px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height:  130%;
-    letter-spacing: -0.01em;
+    text-align: center;
+    letter-spacing: 0;
+    line-height:  150%;
 }
 
 .InfoSimbolo {
     color: #9ba4a5;
-    font-size: 12px;
+    font-size: 16px;
+    line-height:  150%;
     font-weight: bolder;
 }
 
@@ -52,16 +55,19 @@
 }
 
 .Descricao {
-    font-size: 12px;
+    font-size: 24px;
+    line-height: 150%;
 }
 
 .Fonte {
-    font-size: 10px;
+    font-size: 16px;
+    line-height: 150%;
 }
 
-.MaisInfo {
+.Link {
     color: #4294D8;
-    font-size: 14px;
+    font-size: 16px;
+    line-height:  150%;
     justify-self: flex-end;
     height: fit-content;
 }
