--- a/componentes/CardInfo/CardInfo.module.css
+++ b/componentes/CardInfo/CardInfo.module.css
@@ -1,6 +1,6 @@
 .CardInfo{
     border: solid 1px #9494946b;
-    width: fit-content;
+    width: 100%;
     font-size: 14px;
     font-family: 'Inter';
     font-style: normal;
@@ -13,23 +13,36 @@
     color: #9ba4a5;
     margin-bottom: 8px;
 }
+.CardInfoTooltip {
+    font-family: 'Inter';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%;
+    letter-spacing: -0.01em;
+    text-align: center;
+}
 .CardInfoSymbol{
     color: black;
     margin-left: 5px;
 }
-.CardInfoText{
-    border: solid 1px #9494946b;
-    padding: 5px;
-    font-size: 8px;
-    width: fit-content;
-    position: absolute;
-    left:185px;
-    top:40px;
-    display: none;
+.CardInfoSymbol:hover {
+    cursor: default;
 }
-.CardInfoSymbol:hover .CardInfoText{
-    display: block;
-} 
+.CardInfoIndicadorContainer{
+    display: flex;
+    gap: 10px;
+    height: fit-content;
+    align-items: flex-end;
+}
+.CardInfoIndicador{
+    font-size: 18px;
+    font-weight: bold;
+}
+.CardInfoIndicadorDescricao{
+    color: #9ba4a5;
+    font-size: 11px;
+}
 .CardInfoIndiceContainer{
     display: flex;
     flex-direction: row;
