--- a/componentes/ToggleList/ToggleList.module.css
+++ b/componentes/ToggleList/ToggleList.module.css
@@ -1,30 +1,62 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@40;500&display=swap");
 
-.ToggleListContainer {
+.ToggleListContainerBase {
   display: flex;
   width: 90%;
-  margin: 64px 0 0 80px;
-
 }
 
-.ToggleListLeftBlock {
+.ToggleListContainerRow {
+  margin: 64px 0 0 80px;
+}
+
+.ToggleListContainerColumn {
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 40px;
+  padding: 60px 30px;
+}
+
+.Light {
+  background: none;
+}
+
+.LightGrey {
+  background-color: #EFF5F9;
+  border-radius: 20px;
+}
+
+.ToggleListLeftBlockBase {
   display: flex;
   justify-content: flex-start;
-  width: 368px;
-
+  gap: 15px;
 }
 
-.ToggleListLeftBlock p {
+.ToggleListLeftBlockRow {
+  align-items: flex-start;
+  width: 368px;
+  margin-top: 24px;
+}
+
+.ToggleListLeftBlockColumn {
+  align-items: center;
+  width: 100%;
+}
+
+.ToggleListTitle {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
   line-height: 130%;
-  /* identical to box height, or 42px */
-
   letter-spacing: -0.02em;
-
   color: #000000;
+  margin: 0;
+}
+
+.ToggleListIcon {
+  width: 50px;
+  height: 40px;
 }
 
 .ToggleListRightBlock {
@@ -33,8 +65,7 @@
 
 
 @media(max-width: 1440px) {
-  .ToggleListLeftBlock p {
-    font-weight: 500;
+  .ToggleListTitle {
     font-size: 24px;
     line-height: 130%;
     letter-spacing: -0.02em;
@@ -42,28 +73,30 @@
 }
 
 @media(max-width: 780px) {
-  .ToggleListContainer {
-    display: flex;
+  .ToggleListContainerRow {
     flex-direction: column;
     width: 90%;
     margin: 64px 40px;
   }
 
-  .ToggleListLeftBlock p {
+  .ToggleListTitle {
     font-weight: 400;
   }
 }
 
 @media(max-width: 360px) {
-  .ToggleListContainer {
+  .ToggleListContainerRow {
     margin: 64px 16px;
   }
 
-  .ToggleListLeftBlock p {
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 130%;
+  .ToggleListContainerColumn {
+    gap: 24px;
+  }
 
+  .ToggleListTitle {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 130%;
     letter-spacing: -0.02em;
   }
 }
