--- a/componentes/CardLarge/CardLarge.module.css
+++ b/componentes/CardLarge/CardLarge.module.css
@@ -47,50 +47,6 @@
     filter: invert(100%) sepia(0%) saturate(7482%) hue-rotate(260deg) brightness(106%) contrast(102%);
 }
 
-.CardLargeClickableInfoContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-}
-
-.CardLargeClickableInfo {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 8px;
-}
-
-/* .CardLargeContainer:hover .CardLargeClickableInfo img {
-    filter: invert(100%) sepia(0%) saturate(7482%) hue-rotate(260deg) brightness(106%) contrast(102%);
-} */
-
-.CardLargeContainer .CardLargeClickableInfo span {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: -0.01em;
-    color: #1F1F1F;
-}
-
-.CardLargeContainer:hover .CardLargeClickableInfo span {
-    color: #fff;
-}
-
-.CardLargeGridToggleList {
-    display: grid;
-    grid-template-columns: 4.5fr 2fr;
-    column-gap: 24px;
-}
-
-.CardLargeGridToggleListCards {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-}
-
 .CardLargeTitulo{
     display: flex;
     flex-direction: row;
@@ -160,6 +116,56 @@
     display: none;
 }
 
+.CardLargeClickable {
+    text-decoration: none;
+}
+
+.CardLargeClickableInfosContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+}
+
+.CardLargeClickableInfo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8px;
+}
+
+.CardLargeClickableInfoIcon {
+    width: 18px;
+    height: 18px;
+}
+
+.CardLargeClickableInfoContent {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: -0.01em;
+    color: #1F1F1F;
+}
+
+.CardLargeContainer:hover .CardLargeClickableInfoContent {
+    color: #fff;
+}
+
+.CardLargeGridToggleList {
+    display: grid;
+    grid-template-columns: 4.5fr 2fr;
+    column-gap: 24px;
+    margin: 45px 80px;
+}
+
+.CardLargeGridRightCards {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
 @media screen and (max-width: 1023px) {
     .CardLargeContainer{
         height: fit-content;
@@ -190,3 +196,20 @@
     }
 }
 
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    .CardLargeGridToggleList {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .CardLargeGridToggleList {
+        margin: 45px 15px;
+        grid-template-columns: auto;
+        row-gap: 24px;
+    }
+
+    .CardLargeContainer:hover .CardLargeClickableInfoContent {
+        color: #1F1F1F;
+    }
+}
