--- a/componentes/CardLarge/CardLarge.module.css
+++ b/componentes/CardLarge/CardLarge.module.css
@@ -48,10 +48,6 @@
 }
 
 .CardLargeTitulo{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 15px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -118,6 +114,18 @@
 
 .CardLargeClickable {
     text-decoration: none;
+}
+
+.CardLargeClickableTitulo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 130%;
 }
 
 .CardLargeClickableInfosContainer {
