--- a/componentes/CardInfo/CardInfo.module.css
+++ b/componentes/CardInfo/CardInfo.module.css
@@ -1,6 +1,7 @@
 .CardInfo{
     border: solid 1px #9494946b;
     width: 100%;
+    height: 100%;
     font-size: 16px;
     font-family: 'Inter';
     font-style: normal;
