--- a/componentes/CardInfo/CardInfo.module.css
+++ b/componentes/CardInfo/CardInfo.module.css
@@ -54,6 +54,7 @@
     gap: 10px;
     height: fit-content;
     align-items: flex-end;
+    flex-wrap: wrap;
 }
 
 .TipoC .CardInfoIndicadorContainer{
