--- a/componentes/TituloTexto/TituloTexto.module.css
+++ b/componentes/TituloTexto/TituloTexto.module.css
@@ -34,7 +34,7 @@
     }
 }
 /* SMALL */
-@media screen and (min-width: 375px)and (max-width: 767px) {
+@media screen and (min-width: 375px)and (max-width: 768px) {
     .containerTexto{
         padding: 30px 40px 30px 40px;
     }
@@ -47,7 +47,7 @@
         font-size: 32px;  
     }
     .tituloSmall{
-        font-size: 16px;  
+        font-size: 18px;  
     }
     .corpoTexto{
         font-size: 14px;  
@@ -92,5 +92,8 @@
     }
     .corpoTexto{
         font-size: 32px;  
+    }
+    .tituloSmall{
+        font-size: 48px;
     }
 }
