adiciona variação do panel selector para sm

--- a/componentes/PanelSelector/PanelSelector.module.css
+++ b/componentes/PanelSelector/PanelSelector.module.css
@@ -143,6 +143,10 @@
   cursor: pointer;
 }
 
+.PanelSelectorComponents {
+  padding: 0 9%;
+}
+
 @media(max-width: 639px){
   .PanelSelectorMain{
     display: flex;
