--- a/componentes/TituloTexto/TituloTexto.module.css
+++ b/componentes/TituloTexto/TituloTexto.module.css
@@ -5,6 +5,13 @@
     font-style: normal;
     font-weight: 400;
 }
+.containerTextoSmall{
+    background-color: #FFF;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    padding: 30px 0;
+}
 .tituloTexto{
     width: 70%;
     font-size: 64px;  
@@ -34,7 +41,7 @@
     }
 }
 /* SMALL */
-@media screen and (min-width: 375px)and (max-width: 768px) {
+@media screen and (min-width: 375px)and (max-width: 767px) {
     .containerTexto{
         padding: 30px 40px 30px 40px;
     }
